2008-12-08  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/objects.xml: Updated.

	* Mono.TextEditor.Vi/ViMode.cs: When selection is changed independently
	of the vi edit mode, switch into visual mode automatically.

	* Mono.TextEditor/EditMode.cs:
	* Mono.TextEditor/TextEditor.cs: Pass selection change events through to
	the edit mode.

2008-12-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement H, L.

2008-11-27  Grzegorz Sobański  <silk@boktor.net>

	* Mono.TextEditor.Vi/ViMode.cs: Implement gg.

2008-12-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement Y, based on patch by Grzegorz
	Sobański. Closes Bug 449293 - [PATCH] ViMode - implement Y. Also fix
	NREs when pasting an empty clipboard.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel build.

2008-12-02  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Match vim's post-replace caret positioning.

2008-11-26  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Match vim's post-yank caret positioning.

2008-11-26  Grzegorz Sobański  <silk@boktor.net>

	* Mono.TextEditor.Vi/ViActionMaps.cs: handle Insert key in insert 
	  and replace mode.

2008-11-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/ChunkStyle.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Worked on markup
	syntax mode.

2008-11-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/GutterMargin.cs: taken out line change command handler
	in gutter margin.

2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextMarker.cs: Fix end location of underline marker.

2008-11-25  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement sS.

2008-11-24  Mike Krüger  <mkrueger@novell.com>
