@@ -281,8 +281,17 @@ namespace Mono.TextEditor.Vi
 					case 'H':
 						Caret.Line = System.Math.Max (0, Editor.VisualToDocumentLocation (0, Editor.LineHeight - 1).Line);
 						return;
+					case 'J':
+						RunAction (ViActions.Join);
+						return;
 					case 'L':
 						int line = Editor.VisualToDocumentLocation (0, Editor.Allocation.Height - Editor.LineHeight * 2 - 2).Line;
+						if (line < 0)
+							line = Document.LineCount - 1;
+						Caret.Line = line;
+						return;
+					case 'M':
+						line = Editor.VisualToDocumentLocation (0, Editor.Allocation.Height/2).Line;
 						if (line < 0)
 							line = Document.LineCount - 1;
 						Caret.Line = line;
@@ -610,7 +619,10 @@ namespace Mono.TextEditor.Vi
 					Status = commandBuffer.ToString ();
 					state = State.Command;
 					break;
-
+				case 'J':
+					RunAction (ViActions.Join);
+					Reset ("");
+					return;
 				}
 			}
 		}
